# Rebasing-SEP41-Token

./: .env  .gitignore  AGENTS.md  README.md
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: allowance_and_transfer_from.1.json  burn_redeems_usdc.1.json  init_and_metadata.1.json  mint_sets_balance_and_supply.1.json  rebase_fair_share_after_activity_three_users.1.json  rebase_inflow_increases_balances.1.json  transfer_moves_rebased_amount.1.json
docs/: configuration-and-deployment.md  contract-architecture.md  frontend-integration.md  storage-and-rebasing-math.md  testing-strategy.md  token-interface-and-flows.md
frontend/: next.config.js  package-lock.json  package.json
frontend/.next/: react-loadable-manifest.json  trace
frontend/.next/server/: middleware-react-loadable-manifest.js  server-reference-manifest.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: config.ts  format.ts  soroban.ts  wallet.ts
prompts/: 0x01-contract-architecture.md  0x02-storage-and-rebasing-math.md  0x03-token-interface-and-flows.md  0x04-testing-strategy.md  0x05-frontend-integration.md  0x06-configuration-and-deploy.md  AGENTS.md
scripts/: deploy_testnet.sh
