[package]
name = "rusd-rebasing-token"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.4.0"
stellar-tokens = "0.5.0"
stellar-access = "0.5.0"
stellar-contract-utils = "0.5.0"
stellar-macros = "0.5.0"

[dev-dependencies]
soroban-sdk = { version = "23.4.0", features = ["testutils"] }
derive_arbitrary = "=1.3.2"
